# auto-looper

./: CMakeLists.txt  README.md  behavior.md  picoFlashTool_WinPS.ps1  pmod.xlsx  ram.py  summary.md
model/: looper_pedal.scad
pico-src/: CMakeLists.txt  auto-looper.c  cmake_install.cmake
src/: auto-looper.cpp  auto_looper.h  button.cpp  button.h  i2s.pio  stdio_mem.cpp  stdio_mem.h
